# pymediaparser

./: .gitignore  README.md  pyproject.toml  pyrightconfig.json  requirements.txt
docs/: image-analyzer-model-flexibility.md  replay-pipeline-design.md
docs/design/: MLSmartSampler_design.md  replay-pipeline-design.md  smart-sampler-factory.md
docs/userguide/: live_pipeline_guide.md  replay_pipeline_guide.md
examples/: hello.py  live_pipeline_example.py  pipeline_comparison_example.py  replay_pipeline_example.py  smart_pipeline_demo.py
scripts/: run_parser.py
src/pymediaparser/: __init__.py  file_reader.py  frame_buffer.py  frame_sampler.py  live_pipeline.py  pipeline_base.py  replay_pipeline.py  result_handler.py  stream_reader.py  vlm_base.py  vlm_qwen2.py
src/pymediaparser/image_processor/: __init__.py  base.py  resize_processor.py  roi_crop_processor.py
src/pymediaparser/smart_sampler/: __init__.py  base.py  change_analyzer.py  configs.py  factory.py  fast_triggers.py  foreground_extractor.py  frame_validator.py  hard_filter.py  ml_smart_sampler.py  motion_detector.py  simple_smart_sampler.py
src/pymediaparser/vlm/: __init__.py  _local_base.py  bmp.py  configs.py  factory.py  openai_api.py  qwen2.py  qwen3.py
tests/: test_file_reader.py  test_ml_smart_sampler.py  test_replay_pipeline.py  test_vlm_factory.py  test_vlm_openai_api.py
tests/vlm_test/: compare_vllm.py  compare_vlm_models.py  compare_vlm_models_full.py  test_bmp_backend.py  verify_qwen3_vl_2b.py  vlm_demo_gpu.py
