[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pymediaparser"
version = "0.1.0"
description = "媒体流解析与视觉语言模型工具包"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}

dependencies = [
    "torch>=2.0",
    "torchvision>=0.15",
    "numpy>=1.24",
    "pillow>=10.0",
    "requests>=2.28",
    "av>=12.0",
    "opencv-python>=4.8",
    "imagehash>=4.3",
    "scikit-learn>=1.3",
]

[project.optional-dependencies]
vlm = [
    "transformers>=4.40",
    "qwen-vl-utils>=0.0.8",
]
dev = [
    "pytest>=8.0",
]

[tool.setuptools.packages.find]
where = ["src"]
